--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ hasCJKLanguage = true
 # Server-side Chroma syntax highlighting
 pygmentsCodefences = true
 pygmentsUseClassic = false
-pygmentsStyle = "emacs"
+pygmentsStyle = "monokai"
 pygmentsCodefencesGuessSyntax = true
 #pygmentsOptions = "linenos=table"
 
